 - Change license from GPL v3 or later to LGPL v3 or later
 - Change behavior of preprocess(), form.compute_form_data(), form_data.preprocessed_form
 - Allowing grad, div, inner, dot, det, inverse on scalars
 - Simplify Identity(1) -> IntValue(1) automatically
 - Added Levi-Cevita symbol: e = PermutationSymbol(3); e[i,j,k]
 - Fix bug with future division behaviour (ufl does not support floor division)
 - Update repr string in set_cell and set_degree (fix strange cache problem) FIXME: Do not release without removing these first!
 - Add subdomain member variables to form class
 - Allow action on forms of arbitrary rank
0.9.0 [2011-02-23]
 - Allow jump(Sigma, n) for matrix-valued expression Sigma
 - Bug fix in scalar curl operator
 - Bug fix in deviatoric operator
0.5.4 [2010-09-01]
 - Bug fixes in PartExtracter
 - Do not import x for coordinate
 - Add Circumradius to Cell (Cell.circumradius)
 - Add CellVolume to Cell (Cell.volume)
0.5.3 [2010-07-01]
 - Rename ElementRestriction --> RestrictedElement
 - Experimental import of x from tetrahedron
 - Make lhs/rhs work for resrictions
 - Redefine operator + for FiniteElements and replace + by *
 - Rename ElementUnion -> EnrichedElement
 - Add support for tan() and inverse trigonometric functions
0.5.2 [2010-02-15]
 - Attach form data to preprocessed form, accessible by form.form_data()
0.5.1 [2010-02-03]
 - Fix bug in propagate_restriction
0.5.0 [2010-02-01]
 - Several interface changes in FormData class
 - Introduce call preprocess(form) to be called at beginning of compilation
 - Rename BasisFunction --> Argument
 - Rename Function --> Coefficient
0.4.1 [2009-12-04]
 - Redefine grad().T --> grad()
 - New meaning of estimate_max_polynomial_degree
 - New function estimate_total_polynomial_degree
 - Allow degree = None and cell = None for elements
0.4.0 [2009-09-23]
 - Extensions for ElementRestriction (restrict FiniteElement to Cell)
 - Bug fix for lhs/rhs with list tensor types
 - Add new log function set_prefix